bloque2/p5/y.output
Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' escritura_cabeceras_datos declaraciones escritura_TS funciones escritura_main sentencias '}' escritura_fin
    2         | TOK_MAIN '{' funciones sentencias '}'

    3 declaraciones: declaracion
    4              | declaracion declaraciones

    5 declaracion: modificadores_acceso clase identificadores ';'
    6            | modificadores_acceso declaracion_clase ';'

    7 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE
    8                     | TOK_SECRET TOK_UNIQUE
    9                     | TOK_EXPOSED TOK_UNIQUE
   10                     | TOK_HIDDEN
   11                     | TOK_SECRET
   12                     | TOK_EXPOSED
   13                     | TOK_UNIQUE
   14                     | %empty

   15 $@1: %empty

   16 clase: clase_escalar $@1
   17      | clase_vector
   18      | clase_objeto

   19 declaracion_clase: modificadores_clase TOK_CLASS TOK_IDENTIFICADOR TOK_INHERITS identificadores '{' declaraciones funciones '}'
   20                  | modificadores_clase TOK_CLASS TOK_IDENTIFICADOR '{' declaraciones funciones '}'

   21 modificadores_clase: %empty

   22 clase_escalar: tipo

   23 $@2: %empty

   24 tipo: TOK_INT $@2

   25 $@3: %empty

   26 tipo: TOK_BOOLEAN $@3

   27 clase_objeto: '{' TOK_IDENTIFICADOR '}'

   28 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']'

   29 identificadores: TOK_IDENTIFICADOR
   30                | TOK_IDENTIFICADOR ',' identificadores

   31 funciones: funcion funciones
   32          | %empty

   33 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   34 tipo_retorno: TOK_NONE
   35             | tipo
   36             | clase_objeto

   37 parametros_funcion: parametro_funcion resto_parametros_funcion
   38                   | %empty

   39 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   40                         | %empty

   41 parametro_funcion: tipo TOK_IDENTIFICADOR
   42                  | clase_objeto TOK_IDENTIFICADOR

   43 declaraciones_funcion: declaraciones
   44                      | %empty

   45 sentencias: sentencia
   46           | sentencia sentencias

   47 sentencia: sentencia_simple ';'
   48          | bloque

   49 sentencia_simple: asignacion
   50                 | escritura
   51                 | lectura
   52                 | retorno_funcion
   53                 | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   54                 | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   55                 | destruir_objeto

   56 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR

   57 bloque: condicional
   58       | bucle

   59 asignacion: TOK_IDENTIFICADOR '=' exp
   60           | elemento_vector '=' exp
   61           | elemento_vector '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   62           | TOK_IDENTIFICADOR '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   63           | identificador_clase '.' TOK_IDENTIFICADOR '=' exp

   64 elemento_vector: TOK_IDENTIFICADOR '[' exp ']'

   65 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   66            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   67 bucle: TOK_WHILE '(' exp ')' '{' sentencias '}'

   68 lectura: TOK_SCANF TOK_IDENTIFICADOR
   69        | TOK_SCANF elemento_vector

   70 escritura: TOK_PRINTF exp

   71 retorno_funcion: TOK_RETURN exp
   72                | TOK_RETURN TOK_NONE

   73 exp: exp '+' exp
   74    | exp '-' exp
   75    | exp '/' exp
   76    | exp '*' exp
   77    | '-' exp
   78    | exp TOK_AND exp
   79    | exp TOK_OR exp
   80    | '!' exp

   81 $@4: %empty

   82 exp: TOK_IDENTIFICADOR $@4

   83 $@5: %empty

   84 exp: constante $@5
   85    | '(' exp ')'
   86    | '(' comparacion ')'
   87    | elemento_vector
   88    | TOK_IDENTIFICADOR '(' lista_expresiones ')'
   89    | identificador_clase '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   90    | identificador_clase '.' TOK_IDENTIFICADOR

   91 identificador_clase: TOK_IDENTIFICADOR
   92                    | TOK_ITSELF

   93 lista_expresiones: exp resto_lista_expresiones
   94                  | %empty

   95 resto_lista_expresiones: ',' exp resto_lista_expresiones
   96                        | %empty

   97 comparacion: exp TOK_IGUAL exp
   98            | exp TOK_DISTINTO exp
   99            | exp TOK_MENORIGUAL exp
  100            | exp TOK_MAYORIGUAL exp
  101            | exp '<' exp
  102            | exp '>' exp

  103 $@6: %empty

  104 constante: constante_logica $@6

  105 $@7: %empty

  106 constante: constante_entera $@7

  107 $@8: %empty

  108 constante_logica: TOK_TRUE $@8

  109 $@9: %empty

  110 constante_logica: TOK_FALSE $@9

  111 $@10: %empty

  112 constante_entera: TOK_CONSTANTE_ENTERA $@10

  113 escritura_cabeceras_datos: %empty

  114 escritura_TS: %empty

  115 escritura_main: %empty

  116 escritura_fin: %empty


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 80
'(' (40) 33 53 54 61 62 65 66 67 85 86 88 89
')' (41) 33 53 54 61 62 65 66 67 85 86 88 89
'*' (42) 76
'+' (43) 73
',' (44) 30 95
'-' (45) 74 77
'.' (46) 53 63 89 90
'/' (47) 75
';' (59) 5 6 39 47
'<' (60) 101
'=' (61) 59 60 61 62 63
'>' (62) 102
'[' (91) 28 64
']' (93) 28 64
'{' (123) 1 2 19 20 27 33 65 66 67
'}' (125) 1 2 19 20 27 33 65 66 67
error (256)
TOK_NONE (258) 34 72
TOK_CLASS (259) 19 20
TOK_INHERITS (260) 19
TOK_INSTANCE_OF (261) 61 62
TOK_DISCARD (262) 56
TOK_ITSELF (263) 92
TOK_HIDDEN (264) 7 10
TOK_SECRET (265) 8 11
TOK_EXPOSED (266) 9 12
TOK_UNIQUE (267) 7 8 9 13
TOK_FUNCTION (268) 33
TOK_RETURN (269) 71 72
TOK_MAIN (270) 1 2
TOK_INT (271) 24
TOK_BOOLEAN (272) 26
TOK_ARRAY (273) 28
TOK_IF (274) 65 66
TOK_ELSE (275) 66
TOK_WHILE (276) 67
TOK_SCANF (277) 68 69
TOK_PRINTF (278) 70
TOK_IDENTIFICADOR (279) 19 20 27 29 30 33 41 42 53 54 56 59 61 62 63
    64 68 82 88 89 90 91
TOK_IGUAL (280) 97
TOK_DISTINTO (281) 98
TOK_MENORIGUAL (282) 99
TOK_MAYORIGUAL (283) 100
TOK_OR (284) 79
TOK_AND (285) 78
TOK_CONSTANTE_ENTERA (286) 28 112
TOK_FALSE (287) 110
TOK_TRUE (288) 108
NEG_UNARIA (289)


No terminales con las reglas donde aparecen

$accept (52)
    en la izquierda: 0
programa (53)
    en la izquierda: 1 2, en la derecha: 0
declaraciones (54)
    en la izquierda: 3 4, en la derecha: 1 4 19 20 43
declaracion (55)
    en la izquierda: 5 6, en la derecha: 3 4
modificadores_acceso (56)
    en la izquierda: 7 8 9 10 11 12 13 14, en la derecha: 5 6 33
clase (57)
    en la izquierda: 16 17 18, en la derecha: 5
$@1 (58)
    en la izquierda: 15, en la derecha: 16
declaracion_clase (59)
    en la izquierda: 19 20, en la derecha: 6
modificadores_clase (60)
    en la izquierda: 21, en la derecha: 19 20
clase_escalar (61)
    en la izquierda: 22, en la derecha: 16
tipo (62)
    en la izquierda: 24 26, en la derecha: 22 28 35 41
$@2 (63)
    en la izquierda: 23, en la derecha: 24
$@3 (64)
    en la izquierda: 25, en la derecha: 26
clase_objeto (65)
    en la izquierda: 27, en la derecha: 18 36 42
clase_vector (66)
    en la izquierda: 28, en la derecha: 17
identificadores (67)
    en la izquierda: 29 30, en la derecha: 5 19 30
funciones (68)
    en la izquierda: 31 32, en la derecha: 1 2 19 20 31
funcion (69)
    en la izquierda: 33, en la derecha: 31
tipo_retorno (70)
    en la izquierda: 34 35 36, en la derecha: 33
parametros_funcion (71)
    en la izquierda: 37 38, en la derecha: 33
resto_parametros_funcion (72)
    en la izquierda: 39 40, en la derecha: 37 39
parametro_funcion (73)
    en la izquierda: 41 42, en la derecha: 37 39
declaraciones_funcion (74)
    en la izquierda: 43 44, en la derecha: 33
sentencias (75)
    en la izquierda: 45 46, en la derecha: 1 2 33 46 65 66 67
sentencia (76)
    en la izquierda: 47 48, en la derecha: 45 46
sentencia_simple (77)
    en la izquierda: 49 50 51 52 53 54 55, en la derecha: 47
destruir_objeto (78)
    en la izquierda: 56, en la derecha: 55
bloque (79)
    en la izquierda: 57 58, en la derecha: 48
asignacion (80)
    en la izquierda: 59 60 61 62 63, en la derecha: 49
elemento_vector (81)
    en la izquierda: 64, en la derecha: 60 61 69 87
condicional (82)
    en la izquierda: 65 66, en la derecha: 57
bucle (83)
    en la izquierda: 67, en la derecha: 58
lectura (84)
    en la izquierda: 68 69, en la derecha: 51
escritura (85)
    en la izquierda: 70, en la derecha: 50
retorno_funcion (86)
    en la izquierda: 71 72, en la derecha: 52
exp (87)
    en la izquierda: 73 74 75 76 77 78 79 80 82 84 85 86 87 88 89 90,
    en la derecha: 59 60 63 64 65 66 67 70 71 73 74 75 76 77 78 79
    80 85 93 95 97 98 99 100 101 102
$@4 (88)
    en la izquierda: 81, en la derecha: 82
$@5 (89)
    en la izquierda: 83, en la derecha: 84
identificador_clase (90)
    en la izquierda: 91 92, en la derecha: 53 63 89 90
lista_expresiones (91)
    en la izquierda: 93 94, en la derecha: 53 54 61 62 88 89
resto_lista_expresiones (92)
    en la izquierda: 95 96, en la derecha: 93 95
comparacion (93)
    en la izquierda: 97 98 99 100 101 102, en la derecha: 86
constante (94)
    en la izquierda: 104 106, en la derecha: 84
$@6 (95)
    en la izquierda: 103, en la derecha: 104
$@7 (96)
    en la izquierda: 105, en la derecha: 106
constante_logica (97)
    en la izquierda: 108 110, en la derecha: 104
$@8 (98)
    en la izquierda: 107, en la derecha: 108
$@9 (99)
    en la izquierda: 109, en la derecha: 110
constante_entera (100)
    en la izquierda: 112, en la derecha: 106
$@10 (101)
    en la izquierda: 111, en la derecha: 112
escritura_cabeceras_datos (102)
    en la izquierda: 113, en la derecha: 1
escritura_TS (103)
    en la izquierda: 114, en la derecha: 1
escritura_main (104)
    en la izquierda: 115, en la derecha: 1
escritura_fin (105)
    en la izquierda: 116, en la derecha: 1


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . '{' escritura_cabeceras_datos declaraciones escritura_TS funciones escritura_main sentencias '}' escritura_fin
    2         | TOK_MAIN . '{' funciones sentencias '}'

    '{'  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN '{' . escritura_cabeceras_datos declaraciones escritura_TS funciones escritura_main sentencias '}' escritura_fin
    2         | TOK_MAIN '{' . funciones sentencias '}'

    TOK_FUNCTION  desplazar e ir al estado 5

    TOK_DISCARD        reduce usando la regla 32 (funciones)
    TOK_ITSELF         reduce usando la regla 32 (funciones)
    TOK_RETURN         reduce usando la regla 32 (funciones)
    TOK_IF             reduce usando la regla 32 (funciones)
    TOK_WHILE          reduce usando la regla 32 (funciones)
    TOK_SCANF          reduce usando la regla 32 (funciones)
    TOK_PRINTF         reduce usando la regla 32 (funciones)
    TOK_IDENTIFICADOR  reduce usando la regla 32 (funciones)
    $default           reduce usando la regla 113 (escritura_cabeceras_datos)

    funciones                  ir al estado 6
    funcion                    ir al estado 7
    escritura_cabeceras_datos  ir al estado 8


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

   33 funcion: TOK_FUNCTION . modificadores_acceso tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_HIDDEN   desplazar e ir al estado 9
    TOK_SECRET   desplazar e ir al estado 10
    TOK_EXPOSED  desplazar e ir al estado 11
    TOK_UNIQUE   desplazar e ir al estado 12

    $default  reduce usando la regla 14 (modificadores_acceso)

    modificadores_acceso  ir al estado 13


Estado 6

    2 programa: TOK_MAIN '{' funciones . sentencias '}'

    TOK_DISCARD        desplazar e ir al estado 14
    TOK_ITSELF         desplazar e ir al estado 15
    TOK_RETURN         desplazar e ir al estado 16
    TOK_IF             desplazar e ir al estado 17
    TOK_WHILE          desplazar e ir al estado 18
    TOK_SCANF          desplazar e ir al estado 19
    TOK_PRINTF         desplazar e ir al estado 20
    TOK_IDENTIFICADOR  desplazar e ir al estado 21

    sentencias           ir al estado 22
    sentencia            ir al estado 23
    sentencia_simple     ir al estado 24
    destruir_objeto      ir al estado 25
    bloque               ir al estado 26
    asignacion           ir al estado 27
    elemento_vector      ir al estado 28
    condicional          ir al estado 29
    bucle                ir al estado 30
    lectura              ir al estado 31
    escritura            ir al estado 32
    retorno_funcion      ir al estado 33
    identificador_clase  ir al estado 34


Estado 7

   31 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 5

    $default  reduce usando la regla 32 (funciones)

    funciones  ir al estado 35
    funcion    ir al estado 7


Estado 8

    1 programa: TOK_MAIN '{' escritura_cabeceras_datos . declaraciones escritura_TS funciones escritura_main sentencias '}' escritura_fin

    TOK_HIDDEN   desplazar e ir al estado 9
    TOK_SECRET   desplazar e ir al estado 10
    TOK_EXPOSED  desplazar e ir al estado 11
    TOK_UNIQUE   desplazar e ir al estado 12

    $default  reduce usando la regla 14 (modificadores_acceso)

    declaraciones         ir al estado 36
    declaracion           ir al estado 37
    modificadores_acceso  ir al estado 38


Estado 9

    7 modificadores_acceso: TOK_HIDDEN . TOK_UNIQUE
   10                     | TOK_HIDDEN .

    TOK_UNIQUE  desplazar e ir al estado 39

    $default  reduce usando la regla 10 (modificadores_acceso)


Estado 10

    8 modificadores_acceso: TOK_SECRET . TOK_UNIQUE
   11                     | TOK_SECRET .

    TOK_UNIQUE  desplazar e ir al estado 40

    $default  reduce usando la regla 11 (modificadores_acceso)


Estado 11

    9 modificadores_acceso: TOK_EXPOSED . TOK_UNIQUE
   12                     | TOK_EXPOSED .

    TOK_UNIQUE  desplazar e ir al estado 41

    $default  reduce usando la regla 12 (modificadores_acceso)


Estado 12

   13 modificadores_acceso: TOK_UNIQUE .

    $default  reduce usando la regla 13 (modificadores_acceso)


Estado 13

   33 funcion: TOK_FUNCTION modificadores_acceso . tipo_retorno TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_NONE     desplazar e ir al estado 42
    TOK_INT      desplazar e ir al estado 43
    TOK_BOOLEAN  desplazar e ir al estado 44
    '{'          desplazar e ir al estado 45

    tipo          ir al estado 46
    clase_objeto  ir al estado 47
    tipo_retorno  ir al estado 48


Estado 14

   56 destruir_objeto: TOK_DISCARD . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  desplazar e ir al estado 49


Estado 15

   92 identificador_clase: TOK_ITSELF .

    $default  reduce usando la regla 92 (identificador_clase)


Estado 16

   71 retorno_funcion: TOK_RETURN . exp
   72                | TOK_RETURN . TOK_NONE

    TOK_NONE              desplazar e ir al estado 50
    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    elemento_vector      ir al estado 58
    exp                  ir al estado 59
    identificador_clase  ir al estado 60
    constante            ir al estado 61
    constante_logica     ir al estado 62
    constante_entera     ir al estado 63


Estado 17

   65 condicional: TOK_IF . '(' exp ')' '{' sentencias '}'
   66            | TOK_IF . '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    '('  desplazar e ir al estado 64


Estado 18

   67 bucle: TOK_WHILE . '(' exp ')' '{' sentencias '}'

    '('  desplazar e ir al estado 65


Estado 19

   68 lectura: TOK_SCANF . TOK_IDENTIFICADOR
   69        | TOK_SCANF . elemento_vector

    TOK_IDENTIFICADOR  desplazar e ir al estado 66

    elemento_vector  ir al estado 67


Estado 20

   70 escritura: TOK_PRINTF . exp

    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    elemento_vector      ir al estado 58
    exp                  ir al estado 68
    identificador_clase  ir al estado 60
    constante            ir al estado 61
    constante_logica     ir al estado 62
    constante_entera     ir al estado 63


Estado 21

   54 sentencia_simple: TOK_IDENTIFICADOR . '(' lista_expresiones ')'
   59 asignacion: TOK_IDENTIFICADOR . '=' exp
   62           | TOK_IDENTIFICADOR . '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'
   64 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'
   91 identificador_clase: TOK_IDENTIFICADOR .

    '['  desplazar e ir al estado 69
    '('  desplazar e ir al estado 70
    '='  desplazar e ir al estado 71

    $default  reduce usando la regla 91 (identificador_clase)


Estado 22

    2 programa: TOK_MAIN '{' funciones sentencias . '}'

    '}'  desplazar e ir al estado 72


Estado 23

   45 sentencias: sentencia .
   46           | sentencia . sentencias

    TOK_DISCARD        desplazar e ir al estado 14
    TOK_ITSELF         desplazar e ir al estado 15
    TOK_RETURN         desplazar e ir al estado 16
    TOK_IF             desplazar e ir al estado 17
    TOK_WHILE          desplazar e ir al estado 18
    TOK_SCANF          desplazar e ir al estado 19
    TOK_PRINTF         desplazar e ir al estado 20
    TOK_IDENTIFICADOR  desplazar e ir al estado 21

    $default  reduce usando la regla 45 (sentencias)

    sentencias           ir al estado 73
    sentencia            ir al estado 23
    sentencia_simple     ir al estado 24
    destruir_objeto      ir al estado 25
    bloque               ir al estado 26
    asignacion           ir al estado 27
    elemento_vector      ir al estado 28
    condicional          ir al estado 29
    bucle                ir al estado 30
    lectura              ir al estado 31
    escritura            ir al estado 32
    retorno_funcion      ir al estado 33
    identificador_clase  ir al estado 34


Estado 24

   47 sentencia: sentencia_simple . ';'

    ';'  desplazar e ir al estado 74


Estado 25

   55 sentencia_simple: destruir_objeto .

    $default  reduce usando la regla 55 (sentencia_simple)


Estado 26

   48 sentencia: bloque .

    $default  reduce usando la regla 48 (sentencia)


Estado 27

   49 sentencia_simple: asignacion .

    $default  reduce usando la regla 49 (sentencia_simple)


Estado 28

   60 asignacion: elemento_vector . '=' exp
   61           | elemento_vector . '=' TOK_INSTANCE_OF TOK_IDENTIFICADOR '(' lista_expresiones ')'

    '='  desplazar e ir al estado 75


Estado 29

   57 bloque: condicional .

    $default  reduce usando la regla 57 (bloque)


Estado 30

   58 bloque: bucle .

    $default  reduce usando la regla 58 (bloque)


Estado 31

   51 sentencia_simple: lectura .

    $default  reduce usando la regla 51 (sentencia_simple)


Estado 32

   50 sentencia_simple: escritura .

    $default  reduce usando la regla 50 (sentencia_simple)


Estado 33

   52 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 52 (sentencia_simple)


Estado 34

   53 sentencia_simple: identificador_clase . '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   63 asignacion: identificador_clase . '.' TOK_IDENTIFICADOR '=' exp

    '.'  desplazar e ir al estado 76


Estado 35

   31 funciones: funcion funciones .

    $default  reduce usando la regla 31 (funciones)


Estado 36

    1 programa: TOK_MAIN '{' escritura_cabeceras_datos declaraciones . escritura_TS funciones escritura_main sentencias '}' escritura_fin

    $default  reduce usando la regla 114 (escritura_TS)

    escritura_TS  ir al estado 77


Estado 37

    3 declaraciones: declaracion .
    4              | declaracion . declaraciones

    TOK_HIDDEN   desplazar e ir al estado 9
    TOK_SECRET   desplazar e ir al estado 10
    TOK_EXPOSED  desplazar e ir al estado 11
    TOK_UNIQUE   desplazar e ir al estado 12

    TOK_CLASS    reduce usando la regla 14 (modificadores_acceso)
    TOK_INT      reduce usando la regla 14 (modificadores_acceso)
    TOK_BOOLEAN  reduce usando la regla 14 (modificadores_acceso)
    TOK_ARRAY    reduce usando la regla 14 (modificadores_acceso)
    '{'          reduce usando la regla 14 (modificadores_acceso)
    $default     reduce usando la regla 3 (declaraciones)

    declaraciones         ir al estado 78
    declaracion           ir al estado 37
    modificadores_acceso  ir al estado 38


Estado 38

    5 declaracion: modificadores_acceso . clase identificadores ';'
    6            | modificadores_acceso . declaracion_clase ';'

    TOK_INT      desplazar e ir al estado 43
    TOK_BOOLEAN  desplazar e ir al estado 44
    TOK_ARRAY    desplazar e ir al estado 79
    '{'          desplazar e ir al estado 45

    $default  reduce usando la regla 21 (modificadores_clase)

    clase                ir al estado 80
    declaracion_clase    ir al estado 81
    modificadores_clase  ir al estado 82
    clase_escalar        ir al estado 83
    tipo                 ir al estado 84
    clase_objeto         ir al estado 85
    clase_vector         ir al estado 86


Estado 39

    7 modificadores_acceso: TOK_HIDDEN TOK_UNIQUE .

    $default  reduce usando la regla 7 (modificadores_acceso)


Estado 40

    8 modificadores_acceso: TOK_SECRET TOK_UNIQUE .

    $default  reduce usando la regla 8 (modificadores_acceso)


Estado 41

    9 modificadores_acceso: TOK_EXPOSED TOK_UNIQUE .

    $default  reduce usando la regla 9 (modificadores_acceso)


Estado 42

   34 tipo_retorno: TOK_NONE .

    $default  reduce usando la regla 34 (tipo_retorno)


Estado 43

   24 tipo: TOK_INT . $@2

    $default  reduce usando la regla 23 ($@2)

    $@2  ir al estado 87


Estado 44

   26 tipo: TOK_BOOLEAN . $@3

    $default  reduce usando la regla 25 ($@3)

    $@3  ir al estado 88


Estado 45

   27 clase_objeto: '{' . TOK_IDENTIFICADOR '}'

    TOK_IDENTIFICADOR  desplazar e ir al estado 89


Estado 46

   35 tipo_retorno: tipo .

    $default  reduce usando la regla 35 (tipo_retorno)


Estado 47

   36 tipo_retorno: clase_objeto .

    $default  reduce usando la regla 36 (tipo_retorno)


Estado 48

   33 funcion: TOK_FUNCTION modificadores_acceso tipo_retorno . TOK_IDENTIFICADOR '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_IDENTIFICADOR  desplazar e ir al estado 90


Estado 49

   56 destruir_objeto: TOK_DISCARD TOK_IDENTIFICADOR .

    $default  reduce usando la regla 56 (destruir_objeto)


Estado 50

   72 retorno_funcion: TOK_RETURN TOK_NONE .

    $default  reduce usando la regla 72 (retorno_funcion)


Estado 51

   64 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'
   82 exp: TOK_IDENTIFICADOR . $@4
   88    | TOK_IDENTIFICADOR . '(' lista_expresiones ')'
   91 identificador_clase: TOK_IDENTIFICADOR .

    '['  desplazar e ir al estado 69
    '('  desplazar e ir al estado 91

    '.'       reduce usando la regla 91 (identificador_clase)
    $default  reduce usando la regla 81 ($@4)

    $@4  ir al estado 92


Estado 52

  112 constante_entera: TOK_CONSTANTE_ENTERA . $@10

    $default  reduce usando la regla 111 ($@10)

    $@10  ir al estado 93


Estado 53

  110 constante_logica: TOK_FALSE . $@9

    $default  reduce usando la regla 109 ($@9)

    $@9  ir al estado 94


Estado 54

  108 constante_logica: TOK_TRUE . $@8

    $default  reduce usando la regla 107 ($@8)

    $@8  ir al estado 95


Estado 55

   77 exp: '-' . exp

    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    elemento_vector      ir al estado 58
    exp                  ir al estado 96
    identificador_clase  ir al estado 60
    constante            ir al estado 61
    constante_logica     ir al estado 62
    constante_entera     ir al estado 63


Estado 56

   80 exp: '!' . exp

    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    elemento_vector      ir al estado 58
    exp                  ir al estado 97
    identificador_clase  ir al estado 60
    constante            ir al estado 61
    constante_logica     ir al estado 62
    constante_entera     ir al estado 63


Estado 57

   85 exp: '(' . exp ')'
   86    | '(' . comparacion ')'

    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    elemento_vector      ir al estado 58
    exp                  ir al estado 98
    identificador_clase  ir al estado 60
    comparacion          ir al estado 99
    constante            ir al estado 61
    constante_logica     ir al estado 62
    constante_entera     ir al estado 63


Estado 58

   87 exp: elemento_vector .

    $default  reduce usando la regla 87 (exp)


Estado 59

   71 retorno_funcion: TOK_RETURN exp .
   73 exp: exp . '+' exp
   74    | exp . '-' exp
   75    | exp . '/' exp
   76    | exp . '*' exp
   78    | exp . TOK_AND exp
   79    | exp . TOK_OR exp

    TOK_OR   desplazar e ir al estado 100
    TOK_AND  desplazar e ir al estado 101
    '+'      desplazar e ir al estado 102
    '-'      desplazar e ir al estado 103
    '*'      desplazar e ir al estado 104
    '/'      desplazar e ir al estado 105

    $default  reduce usando la regla 71 (retorno_funcion)


Estado 60

   89 exp: identificador_clase . '.' TOK_IDENTIFICADOR '(' lista_expresiones ')'
   90    | identificador_clase . '.' TOK_IDENTIFICADOR

    '.'  desplazar e ir al estado 106


Estado 61

   84 exp: constante . $@5

    $default  reduce usando la regla 83 ($@5)

    $@5  ir al estado 107


Estado 62

  104 constante: constante_logica . $@6

    $default  reduce usando la regla 103 ($@6)

    $@6  ir al estado 108


Estado 63

  106 constante: constante_entera . $@7

    $default  reduce usando la regla 105 ($@7)

    $@7  ir al estado 109


Estado 64

   65 condicional: TOK_IF '(' . exp ')' '{' sentencias '}'
   66            | TOK_IF '(' . exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    elemento_vector      ir al estado 58
    exp                  ir al estado 110
    identificador_clase  ir al estado 60
    constante            ir al estado 61
    constante_logica     ir al estado 62
    constante_entera     ir al estado 63


Estado 65

   67 bucle: TOK_WHILE '(' . exp ')' '{' sentencias '}'

    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    elemento_vector      ir al estado 58
    exp                  ir al estado 111
    identificador_clase  ir al estado 60
    constante            ir al estado 61
    constante_logica     ir al estado 62
    constante_entera     ir al estado 63


Estado 66

   64 elemento_vector: TOK_IDENTIFICADOR . '[' exp ']'
   68 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    '['  desplazar e ir al estado 69

    $default  reduce usando la regla 68 (lectura)


Estado 67

   69 lectura: TOK_SCANF elemento_vector .

    $default  reduce usando la regla 69 (lectura)


Estado 68

   70 escritura: TOK_PRINTF exp .
   73 exp: exp . '+' exp
   74    | exp . '-' exp
   75    | exp . '/' exp
   76    | exp . '*' exp
   78    | exp . TOK_AND exp
   79    | exp . TOK_OR exp

    TOK_OR   desplazar e ir al estado 100
    TOK_AND  desplazar e ir al estado 101
    '+'      desplazar e ir al estado 102
    '-'      desplazar e ir al estado 103
    '*'      desplazar e ir al estado 104
    '/'      desplazar e ir al estado 105

    $default  reduce usando la regla 70 (escritura)


Estado 69

   64 elemento_vector: TOK_IDENTIFICADOR '[' . exp ']'

    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    elemento_vector      ir al estado 58
    exp                  ir al estado 112
    identificador_clase  ir al estado 60
    constante            ir al estado 61
    constante_logica     ir al estado 62
    constante_entera     ir al estado 63


Estado 70

   54 sentencia_simple: TOK_IDENTIFICADOR '(' . lista_expresiones ')'

    TOK_ITSELF            desplazar e ir al estado 15
    TOK_IDENTIFICADOR     desplazar e ir al estado 51
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 52
    TOK_FALSE             desplazar e ir al estado 53
    TOK_TRUE              desplazar e ir al estado 54
    '-'                   desplazar e ir al estado 55
    '!'                   desplazar e ir al estado 56
    '('                   desplazar e ir al estado 57

    $default  reduce usando la regla 94 (lista_expresiones)
